# mayra

./: .editorconfig  .gitignore  MIGRATION_TASKLIST.md  design.md  old_project_proposal.md  package-lock.json  package.json  pnpm-lock.yaml  proposal_updates.md  pyproject.toml  turbo.json  vercel.json
.cursor/rules/: agent-browser-integration.mdc  fastapi-orchestration-production.mdc  mayra-agent-safety-contracts.mdc  mayra-monorepo-architecture.mdc  mayra-observability-testing.mdc  mayra-small-commits.mdc  nextjs-tauri-static-export.mdc  supabase-data.mdc  tauri-production.mdc
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/scripts/: run-tauri.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: chrome-probe.json  main-window.json  notifications.json  secure-store.json  sidecar.json  updater.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: chrome_probe.rs  chromium_launch.rs  commands.rs  lib.rs  main.rs  sidecar.rs  sidecar_env.rs
apps/desktop/tests/: package-manifest.test.mjs
apps/orchestrator/: Dockerfile  modal_app.py  pyproject.toml
apps/orchestrator/mayra_orchestrator/: __init__.py  __main__.py  agent_loop.py  errors.py  parser.py  perf.py  redaction.py  risk.py  settings.py  snapshot.py  step_budget.py
apps/orchestrator/mayra_orchestrator/actions/: mapper.py  schema.py
apps/orchestrator/mayra_orchestrator/api/: app.py  approval_registry.py  correlation.py  deps.py  exceptions.py  memory_tasks.py  schemas.py  session_store.py
apps/orchestrator/mayra_orchestrator/api/routes/: actions.py  auth.py  chat_stream.py  contract_misc.py  health.py  screenshots.py  sessions.py  settings_validate.py  shutdown.py  tasks.py  ui_logs.py  wire.py
apps/orchestrator/mayra_orchestrator/browser/: __init__.py  adapter.py  cloud_adapter.py  cloud_launcher.py  preview_image.py
apps/orchestrator/mayra_orchestrator/browser/policies/: mayra-default.json
apps/orchestrator/mayra_orchestrator/prompts/: templates.py
apps/orchestrator/mayra_orchestrator/providers/: __init__.py  base.py  factory.py  fallback.py  gemini.py  openai_compat.py
apps/orchestrator/tests/: conftest.py
apps/orchestrator/tests/contract/: conftest.py  test_agent_loop_contract.py  test_api_contract.py  test_cloud_mode.py  test_sessions_contract.py
apps/orchestrator/tests/fixtures/sites/: login.html
apps/orchestrator/tests/integration/: test_agent_browser_skips.py
apps/orchestrator/tests/unit/: test_action_schema.py  test_agent_loop_helpers.py  test_browser_adapter_execute.py  test_fallback.py  test_gemini_provider.py  test_mapper.py  test_openai_compat.py  test_parser.py  test_perf.py  test_preview_image.py  test_prompts.py  test_provider_factory.py  test_redact.py  test_risk.py  test_snapshot.py  test_snapshot_node_count.py  test_sse_error_message.py  test_step_budget.py
apps/web/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
apps/web/src/: next-config.test.ts
docs/: MAYRA_BUILD_CHECKLIST.md  MAYRA_DESKTOP_UX_FLOWS.md  MAYRA_PRD.md  MAYRA_TECHNICAL_SPEC.md  rules-decisions.md
docs/final year proposal docs/: chapter_one_proposal.md  chapter_three_draft.md  chapter_two_draft.md  chapters_two_three_outline.md  old_project_proposal.md  project_example.md  proposal_updates.md  references.md  thesis_chapters_draft_blueprint.md
scripts/: contracts-check.mjs  dev-orchestrator.mjs  ensure-sidecar-placeholder.mjs  rename-sidecar.mjs
(+78 files in other folders)
