[project]
name = "mayra-orchestrator"
version = "0.1.0"
description = "Mayra local FastAPI orchestrator"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mayra-contracts",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pillow>=12.2.0",
    "websockets>=16.0",
]

[tool.uv.sources]
mayra-contracts = { workspace = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "respx>=0.22",
  "uvicorn[standard]>=0.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
  "unit: fast in-process tests with no I/O",
  "contract: in-process FastAPI tests with fakes",
  "integration: real subprocesses, network or filesystem (nightly)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mayra-orchestrator = "mayra_orchestrator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mayra_orchestrator"]
