[project]
name = "mayra-orchestrator"
version = "0.1.0"
description = "Mayra local FastAPI orchestrator"
requires-python = ">=3.12,<3.13"
dependencies = [
    "mayra-contracts",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
    "httpx>=0.27",
    "aiolimiter>=1.1",
    "pillow>=12.2.0",
    "websockets>=16.0",
]

[tool.uv.sources]
mayra-contracts = { workspace = true }

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5",
  "respx>=0.22",
  "uvicorn[standard]>=0.32",
  "psutil>=5.9",
]
modal = [
  "modal>=0.64",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
  "unit: fast in-process tests with no I/O",
  "contract: in-process FastAPI tests with fakes",
  "integration: real subprocesses, network or filesystem (nightly)",
  "resilience: in-process fault injection and invariant tests against the real agent loop",
  "fault: fault-injection tests (browser/model failures injected mid-run)",
  "soak: long-horizon runs, 10+ minutes each (weekly)",
  "e2e_real_model: real Chrome + real model API against real websites (costs tokens, manual)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mayra-orchestrator = "mayra_orchestrator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mayra_orchestrator"]
